more spacing issues on about

--- a/css/stylesheetresume.css
+++ b/css/stylesheetresume.css
@@ -158,14 +158,18 @@
      text-decoration: none;
  }
 
+ .about {
+     margin: 0;
+ }
+
  .aboutmoi {
-     background-color: coral;
+     background-color: rgb(148, 221, 221);
      position: relative;
      top: 4.75rem;
      margin-bottom: 4.75rem;
  }
  .aboutme {
-     padding: 1rem 1rem 0;
+     padding: .5rem 1rem 0;
  }
 
  .abouttext {
@@ -174,6 +178,10 @@
 
  .abouttext p {
      margin-bottom: 0;
+ }
+
+ .one {
+     margin: 0;
  }
  p, li {
      font-size: 1rem;
